--- a/bcms/myplat.UIManage/Views/Manager/Index.cshtml
+++ b/bcms/myplat.UIManage/Views/Manager/Index.cshtml
@@ -31,7 +31,7 @@
                 <th>创建时间</th>
                 <th>编辑</th>
                 <th>删除</th>
-                <th>重置密码(123)</th>
+                <th>重置密码</th>
             </tr>
         </thead>
         @if (Model != null && Model.Count() > 0)
