--- a/bcms/myplat.UIManage/Views/Core/Add.cshtml
+++ b/bcms/myplat.UIManage/Views/Core/Add.cshtml
@@ -251,7 +251,7 @@
         <div style="line-height: 30px; font-size: 14px; font-weight: bold; margin-top: 20px; ">
             内容类型:
         </div>
-        <select id="Select_Type" name="Select_Type" class="form-control" validate="empty,positiveint" style="WIDTH: 100px">
+        <select id="Type" name="Type" class="form-control" validate="empty,positiveint" style="WIDTH: 100px">
             @Html.Raw(HTMLUtil.SelectRaw(Core.TypeList, Core.CoreType_Normal, false))
         </select>
     </div>
