--- a/bcms/myplat.UIManage/Views/Core/Add.cshtml
+++ b/bcms/myplat.UIManage/Views/Core/Add.cshtml
@@ -298,9 +298,9 @@
         <div style="margin-bottom:10px;">
             <input id="deepClear" type="button" value="深度清除样式" />
         </div>
-        @*<div style="margin-bottom:10px;">
-                <input id="lockiconImg" type="button" value="图片本地化" />
-            </div>*@
+        <div style="margin-bottom:10px;">
+                <input id="lockiconImg" type="button" value="图片转存到七牛" />
+        </div>
         <input type="button" value="添 加" name="submit_Action" id="submit_Action" />
         <a href="~/article/index">返 回</a>
 }
