--- a/bcms/myplat.UIManage/Views/Shared/_Layout.cshtml
+++ b/bcms/myplat.UIManage/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>@ViewBag.Title - 军事头条后台程序</title>
+    <title>@ViewBag.Title - 灵鹊系统管理后台</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
