--- a/bcms/myplat.UIManage/Views/Core/Add.cshtml
+++ b/bcms/myplat.UIManage/Views/Core/Add.cshtml
@@ -45,7 +45,7 @@
     <script type="text/javascript" charset="utf-8" src="/Content/ueditor/lang/zh-cn/zh-cn.js"></script>
     <script src="~/Scripts/Manage.Validate.js"></script>
     <script>
-        document.domain = "localhost";
+        document.domain = "cqxnlyj.com";
 
         var isSubmitting = false;
         var ue = undefined;
