--- a/bcms/myplat.UIManage/Views/Core/Edit.cshtml
+++ b/bcms/myplat.UIManage/Views/Core/Edit.cshtml
@@ -22,7 +22,7 @@
     <script type="text/javascript" charset="utf-8" src="/Content/ueditor/lang/zh-cn/zh-cn.js"></script>
     <script src="~/Scripts/Manage.Validate.js"></script>
     <script>
-        document.domain = "localhost";
+        document.domain = "cqxnlyj.com";
         var ue = undefined;
         ue = UE.getEditor('editor');
         $(document).ready(function () {
@@ -137,7 +137,7 @@
 
                 if (data) {
                     $.ajax({
-                        url: '/Core/UploadImage',
+                        url: '/Core/UploadImageQiniu',
                         type: 'POST',
                         contentType: false,
                         processData: false,
